@@ -2,15 +2,12 @@ package com.propabanda.finance_tracker.service;
 
 import com.propabanda.finance_tracker.dto.ClientOrderFilterDTO;
 import com.propabanda.finance_tracker.dto.OrderFilterDTO;
-import com.propabanda.finance_tracker.dto.request.OrderItemEntryDTO;
 import com.propabanda.finance_tracker.dto.request.OrderRequestDTO;
 import com.propabanda.finance_tracker.dto.response.ItemResponseDTO;
-import com.propabanda.finance_tracker.dto.response.OrderItemResponseDTO;
 import com.propabanda.finance_tracker.dto.response.OrderResponseDTO;
 import com.propabanda.finance_tracker.model.Client;
 import com.propabanda.finance_tracker.model.Item;
 import com.propabanda.finance_tracker.model.Order;
-import com.propabanda.finance_tracker.model.OrderItem;
 import com.propabanda.finance_tracker.repository.ClientRepository;
 import com.propabanda.finance_tracker.repository.ItemRepository;
 import com.propabanda.finance_tracker.repository.OrderRepository;
@@ -49,7 +46,7 @@ public class OrderService {
     public List<OrderResponseDTO> findAll() {
         return orderRepository.findAll().stream()
                 .map(this::toOrderResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Optional<OrderResponseDTO> findById(Long id) {
@@ -63,97 +60,90 @@ public class OrderService {
     public OrderResponseDTO save(OrderRequestDTO orderRequestDTO) {
         Order order = toOrderModel(orderRequestDTO);
         order = orderRepository.save(order);
+        order.setIdentifier(buildIdentifier(order));
+        order = orderRepository.save(order);
         return toOrderResponseDTO(order);
     }
 
     public OrderResponseDTO update(Long id, OrderRequestDTO orderRequestDTO) {
         Order order = toOrderModel(orderRequestDTO);
         order.setId(id);
+        order.setIdentifier(buildIdentifier(order));
         order = orderRepository.save(order);
         return toOrderResponseDTO(order);
+    }
+
+    private String buildIdentifier(Order order) {
+        return "ORD-" + order.getEmissionDate().getYear()
+                + String.format("-%06d", order.getId());
     }
 
     public void delete(Long id) {
         orderRepository.deleteById(id);
     }
 
-    /* método que atende POST /api/orders/filter -------------------------- */
-    public List<OrderResponseDTO> findAllFiltered(OrderFilterDTO dto) {
+    public List<OrderResponseDTO> findAllFiltered(OrderFilterDTO orderFilterDTO) {
 
-        List<Order> orders = orderRepository.findAll();
+        List<Order> orderList = orderRepository.findAll();
 
-        /* --- filtro: texto livre no nome do cliente -------------------- */
-        if (dto.getSearch() != null && !dto.getSearch().isBlank()) {
-            String term = dto.getSearch().toLowerCase();
-            orders = orders.stream()
-                    .filter(o -> o.getClient().getName()
-                            .toLowerCase()
-                            .contains(term))
+        if (orderFilterDTO.getSearch() != null && !orderFilterDTO.getSearch().isBlank()) {
+            String term = orderFilterDTO.getSearch().toLowerCase();
+            orderList = orderList.stream()
+                    .filter(order -> order.getClient().getName().toLowerCase().contains(term))
                     .toList();
         }
 
-        /* --- filtro: intervalo de datas (emissionDate) ---------------- */
-        if (dto.getStartDate() != null) {
-            orders = orders.stream()
-                    .filter(o -> !o.getEmissionDate()
-                            .isBefore(dto.getStartDate()))
+        if (orderFilterDTO.getStartDate() != null) {
+            orderList = orderList.stream()
+                    .filter(order -> !order.getEmissionDate().isBefore(orderFilterDTO.getStartDate()))
                     .toList();
         }
-        if (dto.getEndDate() != null) {
-            orders = orders.stream()
-                    .filter(o -> !o.getEmissionDate()
-                            .isAfter(dto.getEndDate()))
+        if (orderFilterDTO.getEndDate() != null) {
+            orderList = orderList.stream()
+                    .filter(order -> !order.getEmissionDate().isAfter(orderFilterDTO.getEndDate()))
                     .toList();
         }
 
-        /* --- filtro: itens específicos -------------------------------- */
-        if (dto.getItemIds() != null && !dto.getItemIds().isEmpty()) {
-            orders = orders.stream()
-                    .filter(o -> o.getItems().stream()
-                            .anyMatch(oi -> dto.getItemIds()
-                                    .contains(oi.getItem()
-                                            .getId())))
+        if (orderFilterDTO.getItemIds() != null && !orderFilterDTO.getItemIds().isEmpty()) {
+            orderList = orderList.stream()
+                    .filter(order -> order.getItems().stream()
+                            .anyMatch(item -> orderFilterDTO.getItemIds().contains(item.getId())))
                     .toList();
         }
 
-        /* --- ordenação ------------------------------------------------ */
-        Comparator<Order> comp =
-                "emissionDate".equalsIgnoreCase(dto.getSortBy())
-                        ? Comparator.comparing(Order::getEmissionDate)
-                        : Comparator.comparing(o -> o.getClient()
-                                .getName(),
-                        String.CASE_INSENSITIVE_ORDER);
+        Comparator<Order> comparator = "emissionDate".equalsIgnoreCase(orderFilterDTO.getSortBy())
+                ? Comparator.comparing(Order::getEmissionDate)
+                : Comparator.comparing(order -> order.getClient().getName(), String.CASE_INSENSITIVE_ORDER);
 
-        if ("desc".equalsIgnoreCase(dto.getDirection())) comp = comp.reversed();
+        if ("desc".equalsIgnoreCase(orderFilterDTO.getDirection())) {
+            comparator = comparator.reversed();
+        }
 
-        orders = orders.stream().sorted(comp).toList();
+        orderList = orderList.stream().sorted(comparator).toList();
 
-        return orders.stream()
+        return orderList.stream()
                 .map(this::toOrderResponseDTO)
                 .toList();
     }
 
-
     public List<OrderResponseDTO> findByClientFiltered(Long clientId, ClientOrderFilterDTO clientOrderFilterDTO) {
-        List<Order> orders = orderRepository.findAll().stream()
+        List<Order> orderList = orderRepository.findAll().stream()
                 .filter(order -> order.getClient().getId().equals(clientId))
                 .toList();
 
         if (clientOrderFilterDTO.getItemSearch() != null && !clientOrderFilterDTO.getItemSearch().isBlank()) {
             String term = clientOrderFilterDTO.getItemSearch().toLowerCase();
-            orders = orders.stream()
+            orderList = orderList.stream()
                     .filter(order -> order.getItems().stream()
-                            .anyMatch(orderItem -> orderItem.getItem().getName().toLowerCase().contains(term)))
+                            .anyMatch(item -> item.getName().toLowerCase().contains(term)))
                     .toList();
         }
 
         Comparator<Order> comparator;
-
         switch (clientOrderFilterDTO.getSortBy()) {
-            case "emissionDate" -> comparator = Comparator.comparing(Order::getEmissionDate);
             case "id" -> comparator = Comparator.comparing(Order::getId);
-            case "itemName" -> comparator = Comparator.comparing(o ->
-                    o.getItems().stream().findFirst().map(orderItem -> orderItem.getItem().getName().toLowerCase()).orElse(""));
+            case "itemName" -> comparator = Comparator.comparing(order ->
+                    order.getItems().stream().findFirst().map(Item::getName).orElse(""), String.CASE_INSENSITIVE_ORDER);
             default -> comparator = Comparator.comparing(Order::getEmissionDate);
         }
 
@@ -161,45 +151,40 @@ public class OrderService {
             comparator = comparator.reversed();
         }
 
-        orders = orders.stream().sorted(comparator).toList();
+        orderList = orderList.stream().sorted(comparator).toList();
 
-        return orders.stream()
+        return orderList.stream()
                 .map(this::toOrderResponseDTO)
                 .toList();
     }
 
-    public void uploadContract(Long orderId, MultipartFile file) throws IOException {
+    public void uploadContract(Long orderId, MultipartFile multipartFile) throws IOException {
 
         Order order = orderRepository.findById(orderId)
                 .orElseThrow(() -> new IllegalArgumentException("Order not found"));
 
-        // ----- validações -----
-        String originalName = Optional.ofNullable(file.getOriginalFilename())
+        String originalName = Optional.ofNullable(multipartFile.getOriginalFilename())
                 .orElseThrow(() -> new IllegalArgumentException("Missing file name"));
 
         if (!originalName.toLowerCase().matches(".*\\.(pdf|doc|docx)$")) {
-            throw new IllegalArgumentException("Invalid file format. Only PDF, DOC, DOCX allowed.");
+            throw new IllegalArgumentException("Invalid file format");
         }
 
-        final long MAX_SIZE = 10 * 1024 * 1024; // 10 MB
-        if (file.getSize() > MAX_SIZE) {
-            throw new IllegalArgumentException("File too large. Max 10MB.");
+        long maxSize = 10 * 1024 * 1024;
+        if (multipartFile.getSize() > maxSize) {
+            throw new IllegalArgumentException("File too large");
         }
 
-        // ----- path seguro -----
         String safeName = originalName.replaceAll("[^a-zA-Z0-9.\\- _]", "_");
-        Path uploadPath = Paths.get(uploadDir);          // ex.: C:/finance-tracker/uploads/contracts
-        Files.createDirectories(uploadPath);             // cria se não existir
+        Path uploadPath = Paths.get(uploadDir);
+        Files.createDirectories(uploadPath);
 
-        Path dest = uploadPath.resolve(
-                "order_" + orderId + "_" + System.currentTimeMillis() + "_" + safeName);
+        Path dest = uploadPath.resolve("order_" + orderId + "_" + System.currentTimeMillis() + "_" + safeName);
 
-        // ----- gravação -----
-        try (InputStream in = file.getInputStream()) {
+        try (InputStream in = multipartFile.getInputStream()) {
             Files.copy(in, dest, StandardCopyOption.REPLACE_EXISTING);
         }
 
-        // ----- persiste no banco -----
         order.setContractFilePath(dest.toString());
         orderRepository.save(order);
     }
@@ -209,14 +194,13 @@ public class OrderService {
                 .orElseThrow(() -> new IllegalArgumentException("Order not found"));
 
         if (order.getContractFilePath() == null) {
-            throw new IllegalStateException("No contract uploaded for this order.");
+            throw new IllegalStateException("No contract uploaded");
         }
 
         File file = new File(order.getContractFilePath());
         if (!file.exists()) {
-            throw new IllegalStateException("Contract file not found on server.");
+            throw new IllegalStateException("Contract file not found");
         }
-
         return file;
     }
 
@@ -226,16 +210,13 @@ public class OrderService {
 
         if (order.getContractFilePath() != null) {
             File file = new File(order.getContractFilePath());
-
-            if (file.exists() && !file.delete()) {
-                throw new IOException("Failed to delete contract file: " + file.getAbsolutePath());
+            if (file.exists()) {
+                Files.delete(file.toPath());
             }
-
             order.setContractFilePath(null);
             orderRepository.save(order);
         }
     }
-
 
     private Order toOrderModel(OrderRequestDTO orderRequestDTO) {
 
@@ -244,6 +225,7 @@ public class OrderService {
 
         Order order = new Order();
         order.setClient(client);
+        order.setValue(orderRequestDTO.getValue());
         order.setContractStartDate(orderRequestDTO.getContractStartDate());
         order.setContractEndDate(orderRequestDTO.getContractEndDate());
         order.setInstallmentDay(orderRequestDTO.getInstallmentDay());
@@ -253,45 +235,29 @@ public class OrderService {
         order.setPaidInstallmentsCount(orderRequestDTO.getPaidInstallmentsCount());
         order.setContractFilePath(orderRequestDTO.getContractFilePath());
 
-        Set<OrderItem> orderItems = new HashSet<>();
+        Set<Item> itemSet = orderRequestDTO.getItems().stream()
+                .map(itemId -> itemRepository.findById(itemId)
+                        .orElseThrow(() -> new IllegalArgumentException("Item id " + itemId + " not found")))
+                .collect(Collectors.toSet());
 
-        for (OrderItemEntryDTO orderItemEntryDTO : orderRequestDTO.getItems()) {
-            Item item = itemRepository.findById(orderItemEntryDTO.getItemId())
-                    .orElseThrow(() -> new IllegalArgumentException("Item id " + orderItemEntryDTO.getItemId() + " not found"));
-
-            OrderItem orderItem = new OrderItem();
-            orderItem.setOrder(order);
-            orderItem.setItem(item);
-            orderItem.setQuantity(orderItemEntryDTO.getQuantity());
-            orderItem.setPriceSnapshot(item.getPrice());
-            orderItems.add(orderItem);
-        }
-        order.setItems(orderItems);
-
+        order.setItems(itemSet);
         return order;
     }
 
-
-    public OrderResponseDTO toOrderResponseDTO(Order order) {
-
-        BigDecimal totalValue = order.getItems().stream()
-                .map(orderItem -> orderItem.getPriceSnapshot().multiply(BigDecimal.valueOf(orderItem.getQuantity())))
-                .reduce(BigDecimal.ZERO, BigDecimal::add);
-
+    OrderResponseDTO toOrderResponseDTO(Order order) {
+        BigDecimal totalValue = order.getValue();
         BigDecimal discountPercent = order.getDiscount()
                 .divide(BigDecimal.valueOf(100), 2, RoundingMode.HALF_UP);
-
         BigDecimal discountedValue = totalValue.subtract(totalValue.multiply(discountPercent));
         BigDecimal installmentValue = discountedValue
                 .divide(BigDecimal.valueOf(order.getInstallmentCount()), 2, RoundingMode.HALF_UP);
-
         BigDecimal paidValue = installmentValue
                 .multiply(BigDecimal.valueOf(order.getPaidInstallmentsCount()));
-
         BigDecimal remainingValue = discountedValue.subtract(paidValue);
 
         OrderResponseDTO orderResponseDTO = new OrderResponseDTO();
         orderResponseDTO.setId(order.getId());
+        orderResponseDTO.setIdentifier(order.getIdentifier());
         orderResponseDTO.setClientId(order.getClient().getId());
         orderResponseDTO.setClientName(order.getClient().getName());
         orderResponseDTO.setContractStartDate(order.getContractStartDate());
@@ -302,22 +268,16 @@ public class OrderService {
         orderResponseDTO.setEmissionDate(order.getEmissionDate());
         orderResponseDTO.setPaidInstallmentsCount(order.getPaidInstallmentsCount());
         orderResponseDTO.setContractFilePath(order.getContractFilePath());
-
-        orderResponseDTO.setTotalValue(totalValue);
+        orderResponseDTO.setValue(totalValue);
         orderResponseDTO.setDiscountedValue(discountedValue);
         orderResponseDTO.setPaidValue(paidValue);
         orderResponseDTO.setRemainingValue(remainingValue);
-
-        orderResponseDTO.setItems(order.getItems().stream().map(orderItem -> {
-            OrderItemResponseDTO orderItemResponseDTO = new OrderItemResponseDTO();
-            orderItemResponseDTO.setItemId(orderItem.getItem().getId());
-            orderItemResponseDTO.setItemName(orderItem.getItem().getName());
-            orderItemResponseDTO.setQuantity(orderItem.getQuantity());
-            orderItemResponseDTO.setUnitPriceSnapshot(orderItem.getPriceSnapshot());
-            orderItemResponseDTO.setTotal(orderItem.getPriceSnapshot().multiply(BigDecimal.valueOf(orderItem.getQuantity())));
-            return orderItemResponseDTO;
+        orderResponseDTO.setItems(order.getItems().stream().map(item -> {
+            ItemResponseDTO itemResponseDTO = new ItemResponseDTO();
+            itemResponseDTO.setId(item.getId());
+            itemResponseDTO.setName(item.getName());
+            return itemResponseDTO;
         }).collect(Collectors.toSet()));
-
         return orderResponseDTO;
     }
 }
